<resources>
    <string name="app_name" translatable="false">VideoFace</string>
    <string name="video_list_title" translatable="false">VideoFace</string>
    <string name="share">Share</string>
    <string name="cover" translatable="false">cover</string>
    <string name="published">published %s</string>
    <string name="duration_placeholder" translatable="false">--:--</string>
    <string name="emo_placeholder" translatable="false"/>
    <string name="faces_placeholder" translatable="false">0</string>
    <string name="anger">Anger</string>
    <string name="disgust">Disgust</string>
    <string name="fear">Fear</string>
    <string name="sad">Sad</string>
    <string name="surprise">Surprise</string>
    <string name="rested">Rested</string>
    <string name="happy">Happy</string>
    <string name="share_a_video">Open YouTube and share a video\nto VideoFace</string>
    <string name="share_a_video2">You will see the viewers grimaces!</string>
    <string name="no_statistics">No one has seen the video yet. Share it again!</string>
    <string name="error">Whoops! Slow or no internet connection</string>
    <string name="faces">FACES</string>
    <string name="info">info</string>
    <string name="open_youtube">Open YouTube</string>

    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="now">now</string>
    <string name="ago">ago</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="ageOver51" translatable="false"><![CDATA[> 51]]></string>
    <string name="age3551" translatable="false">35 - 51</string>
    <string name="age1835" translatable="false">18 - 35</string>
    <string name="ageUnder18" translatable="false"><![CDATA[< 18]]></string>
</resources>
